syntax = "proto3";

package medium.maps;

message MapMessage {
  // Basic maps
  map<string, string> string_map = 1;
  map<string, int32> int_map = 2;
  map<string, bool> bool_map = 3;
  map<string, double> double_map = 4;
  map<string, bytes> bytes_map = 5;
  
  // Maps with enum values
  map<string, Status> status_map = 6;
  
  // Maps with message values
  map<string, UserInfo> user_map = 7;
  
  // Maps with different key types
  map<int32, string> id_to_name = 8;
  map<int64, UserInfo> id_to_user = 9;
  map<bool, string> flag_to_description = 10;
}

enum Status {
  STATUS_UNKNOWN = 0;
  ACTIVE = 1;
  INACTIVE = 2;
  SUSPENDED = 3;
}

message UserInfo {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

message NestedMaps {
  map<string, MapMessage> nested_maps = 1;
  map<string, map<string, string>> double_nested = 2; // This won't work in proto3, but let's test error handling
}
